--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,8 +1,9 @@
 .App {
   display: flex;
   flex-direction: column;
-  max-width: 100%;
-  height: 100%;
+  width: 100%;
+  max-width: 1280px;
+  margin: auto;
   text-align: center;
   justify-content: center;
   align-items:center;
