--- a/src/components/Curses.css
+++ b/src/components/Curses.css
@@ -1,5 +1,5 @@
 .curses {
-   width: 1000px;
+   width: calc(100% - (70px*2));
    padding: 100px 0;
    display: flex;
    flex-direction: column;
@@ -66,7 +66,7 @@ margin: 0;
 }
 
 .curses-text {
-   width: 880px;
+width: 100%;
 min-height: 110px;
 flex-shrink: 0;
    border-radius: 16px;
@@ -181,7 +181,39 @@ text-align: left;
 
 
 
-.open {
+.open-block {
    display: block !important; 
    transition: all 250ms ease-out !important;
 }
+
+@media screen and (max-width: 968px) {
+   .curses {
+      
+   }
+
+   .curses-blocks {
+      flex-direction: column;
+      
+   }
+
+   .curses-block-1 {
+      margin-bottom: 30px;
+   }
+         
+      }
+
+      @media screen and (max-width: 600px) {
+         .curses-text {
+            width: 90%;
+         }
+      
+         .curses-blocks {
+            flex-direction: column;
+            
+         }
+      
+         .curses-block-1 {
+            margin-bottom: 30px;
+         }
+               
+            }
