--- a/src/components/Portfolio.css
+++ b/src/components/Portfolio.css
@@ -1,6 +1,7 @@
 .portfolio {
    display: flex;
-   width: 1180px;
+   width: calc(100% - (70px*2));
+   height: auto;
    flex-direction: column;
    padding: 100px 0;
 }
@@ -106,25 +107,70 @@ margin-right: 0;
 }
 
 .portfolio-low-block-1 {
-   max-width: 1608px;
-   height: 968px;
+   
+   width:  100%;
+   height: auto;
    flex-shrink: 0;
    display: none;
-   grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-   grid-auto-columns: min-content;
-   justify-items: center;
+   margin: auto;
+   grid-template-columns: repeat(3, 1fr);
+   grid-auto-columns: repeat(3, 1fr);
+   justify-content: center;
+    align-content: center;
    gap: 20px;
 }
 
 .portfolio-low-block-2 {
-   max-width: 1608px;
-   height: 968px;
+   width:  100%;
+   height: auto;
    flex-shrink: 0;
    display: none;
-   grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-   grid-auto-columns: min-content;
-   justify-items: center;
+   margin: auto;
+   grid-template-columns: repeat(3, 1fr);
+   justify-content: center;
+    align-content: center;
    gap: 20px;
+}
+
+@media screen and (max-width: 1170px) {
+   .portfolio-low-block-1{
+      grid-template-columns: repeat(2, 1fr);
+      gap: 16px;
+      justify-items: center; 
+   }
+
+   .portfolio-low-block-2{
+      grid-template-columns: repeat(2, 1fr);
+      gap: 16px;
+      justify-items: center; 
+   }
+}
+
+@media screen and (max-width: 800px) {
+   .portfolio-low-block-1{
+     
+      grid-template-columns: repeat(1, 1fr);
+      gap: 16px;
+
+   }
+
+   .portfolio-low-block-2{
+     
+      grid-template-columns: repeat(1, 1fr);
+      gap: 10px;
+   }
+
+   .portfolio-buttons {
+      flex-direction: column;
+   }
+
+   .portfolio-btn {
+      margin-top: 20px;
+   }
+
+   .portfolio-up-block{
+      align-items: center;
+   }
 }
 
 .open {
@@ -143,6 +189,7 @@ margin-right: 0;
    justify-content: space-between;
    padding: 30px;
    box-sizing: border-box;
+   overflow: hidden;
 }
 
 .block-item > span {
@@ -167,6 +214,7 @@ margin-right: 0;
 .block-item > div {
    display: flex;
    flex-wrap: wrap;
+   
 } 
 
 .teg {
@@ -197,11 +245,42 @@ flex-shrink: 0;
 border-radius: 8px;
 border: 1px solid #7B4AE2;
 overflow:hidden;
+transition: all 350ms ease-in-out;
+}
+
+.photo:hover {
+   width: 440px;
+margin-left: -70px;
+height: auto;
+border: none;
+
 }
 
 .photo > a > img {
    max-width: 100%;
-   object-fit: cover;
+   object-fit: fill;
    object-position: center;
    border-radius: 8px;
+   
+}
+
+.photo > a > img:hover {
+   object-fit: fill;
+   object-position: top;
+   
+}
+
+@media screen and (max-width: 1024px) {
+   .portfolio-up-block {
+      flex-direction: column;
+   }
+
+   .portfolio-name {
+      
+      height: auto; 
+   }
+
+   .portfolio-name-h2 > h2 {
+      margin-bottom: 30px;
+   }
 }
