--- a/src/components/Skills.css
+++ b/src/components/Skills.css
@@ -1,5 +1,6 @@
 .skills {
-   padding: 100px;
+   padding: 100px 0 ;
+   width: calc(100% - (70px*2));
    display: flex;
    flex-direction: column;
    justify-content: start;
@@ -31,7 +32,7 @@
    display: flex;
    justify-content: center;
    align-items: center;
-   width: 1000px;
+   width: 100%;
 }
 
 .skills-img > svg {
@@ -42,4 +43,11 @@
 .skills-img > svg:hover {
    margin: 5px;
    width: 50px;
+}
+
+
+@media screen and (max-width: 600px) {
+   .skills-img {
+      flex-direction: column;
+   }
 }
