--- a/src/components/App.css
+++ b/src/components/App.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  max-width: 1280px;
+  /* max-width: 1280px; */
   margin: auto;
   text-align: center;
   justify-content: center;
