--- a/src/components/About.css
+++ b/src/components/About.css
@@ -30,19 +30,16 @@ margin-bottom: 15px;
 }
 
 .about-text-item-first {
-   width: 160px;
-height: 45px;
-flex-shrink: 0;
-   border-radius: 16px;
+width: max-content;
+border-radius: 16px;
 background: rgba(123, 74, 226, 0.10);
-   display: flex;
-width: 140px;
+display: flex;
+
 height: 50px;
 padding: 0 40px;
 flex-direction: column;
 justify-content: center;
-flex-shrink: 0;
-   color: #7B4AE2;
+color: #7B4AE2;
 text-align: center;
 font-family: Raleway;
 font-size: 20px;
