--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -26,21 +26,40 @@
    display: none;
 }
 
+.header-svg-2 {
+   width: 25px;
+   margin-right: 20px;
+   display: none;
+}
+
 @media screen and (max-width: 968px) {
    .menu-list  {
       flex-direction: column;
    }
 
+   .menu-item {
+      margin-bottom: 20px;
+      text-align: left;
+      
+   }
+
    .header {
+      width: 50%;
       flex-direction: column;
       width: max-content;
       
    }
 
-   .menu-item {
-      margin-top: 20px;
-      margin-right: 0;
-      text-align: left;
+   .menu {
+      display: none;
+   }
+
+   .open-menu {
+      display: block;
+   }
+
+   .open-svg {
+      display: flex;
    }
 }
 
@@ -100,10 +119,6 @@
 
    .open-menu {
       display: block;
-   }
-
-   .header-svg {
-      display: flex;
    }
 
 }
